--- a/.github/workflows/assignment1.yml
+++ b/.github/workflows/assignment1.yml
@@ -15,10 +15,9 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Archive production artifacts
-        uses: actions/upload-artifact@v3
+      - uses: actions/upload-artifact@v3
         with:
-          name: dist-without-markdown
-          path: |
+          name: my-artifact
+          path: path/to/artifact/ 
       - name: Display Python version
         run: python -c "import sys; print(sys.version)"
