--- a/.github/workflows/assignment1.yml
+++ b/.github/workflows/assignment1.yml
@@ -18,6 +18,6 @@ jobs:
       - uses: actions/upload-artifact@v3
         with:
           name: my-artifact
-          path: path/to/artifact/ 
+          path: ${{ github.workspace }}
       - name: Display Python version
         run: python -c "import sys; print(sys.version)"
