--- a/.github/workflows/assignment1.yml
+++ b/.github/workflows/assignment1.yml
@@ -15,9 +15,11 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
+      - run: mkdir -p path/to/artifact
+      - run: echo hello > path/to/artifact/${{ matrix.python-version }}.txt
       - uses: actions/upload-artifact@v3
         with:
           name: my-artifact
-          path: ${{ env.artifactPath }}
+          path: path/to/artifact/${{ matrix.python-version }}.txt
       - name: Display Python version
         run: python -c "import sys; print(sys.version)"
