--- a/.github/workflows/assignment1.yml
+++ b/.github/workflows/assignment1.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
       - run: mkdir -p path/to/artifact
-      - run: echo hello > path/to/artifact/${{ matrix.python-version }}.txt
+      - run: echo ${{ matrix.node-version }} > path/to/artifact/${{ matrix.python-version }}.txt
       - uses: actions/upload-artifact@v3
         with:
           name: my-artifact
